cargo-features = ["edition2021"]
[package]
name = "batch-payment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.9.1"
num-traits = "0.2"
num_enum = "0.5.4"
arrayref = "0.3.6"
num-derive = "0.3"
solana-program = "1.8.2"
thiserror = "1.0"

[dev-dependencies]
solana-program-test = "1.7.1"
solana-client = "1.7.1"
solana-sdk = "1.7.1"

[lib]
crate-type = ["cdylib", "lib"]